tests/negative_pomidory/pro.pomidor

@Feature  SmokeTest
"""
driver.get("https://pomidor-automation.com")
driver.title
--driver.find_element_by_css_selector("button#menu").click()
"""

@Feature  Regression
"""
driver.get("https://patreon.com")
driver.title
"""

@Feature  SmokeTest
"""
driver.get("https://facebook.com")
driver.title
"""